--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@ makefile~
 README~
 TODO~
 LICENCE~
-*.map
-*.MAP
+KDREAMS.AUD
+KDREAMS.CFG
+KDREAMS.CMP
+KDREAMS.DAT
+KDREAMS.EGA
+KDREAMS.MAP
 !makefile
 !.git/config
 # except foo.html which is maintained by hand.
